tests/hostIPC/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-namespace-allowed
  labels:
    app: nginx-host-namespace
spec:
  hostPID: false
  containers:
  - name: nginx
    image: nginx
